--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-otp-input": "^2.4.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "stylis": "^4.1.2",
