--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@emotion/react": "^11.10.4",
     "@mantine/carousel": "^5.5.4",
     "@mantine/core": "^5.5.4",
+    "@mantine/dates": "^5.6.0",
     "@mantine/form": "^5.5.4",
     "@mantine/hooks": "^5.5.4",
     "@mantine/modals": "^5.5.4",
     "@mantine/notifications": "^5.5.4",
     "@mantine/nprogress": "^5.5.4",
     "@reduxjs/toolkit": "^1.8.5",
+    "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.3",
+    "emoji-picker-react": "^4.4.3",
     "framer-motion": "^7.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
